--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="ja">
 <head>
 <meta charset="utf-8">
@@ -378,8 +377,7 @@ p {
 </style>
 <!-- }}} -->
 <script src="https://polyfill.io/v3/polyfill.min.js"></script>
-
-  <link href="/index.d.ts" ></head>
+</head>
 <body class="home">
 <!-- main content-->
 <div id="top">
@@ -527,6 +525,5 @@ p {
     <p class="go-top"><a href="#top">Top</a></p>
   </div>
 </div>
-
-  <script src="/sws-smoothscroll.min.js" ></script></body>
+</body>
 </html>
