Supports scroll-margin-top
Upgrade npm packages

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -286,10 +286,12 @@ p {
 }
 
 .home #lorem-10 {
+  scroll-margin-top: calc(100rem / 16);
   background-color: #9090d5;
 }
 
 .easing #lorem-10 {
+  scroll-margin-top: calc(100rem / 16);
   background-color: #d59090;
 }
 
@@ -392,7 +394,7 @@ p {
     <li><a href="#lorem-7">lorem7</a></li>
     <li><a href="#lorem-8">lorem8</a></li>
     <li><a href="#lorem-9">lorem9</a></li>
-    <li><a href="#lorem-10">lorem10</a></li>
+    <li><a href="#lorem-10">lorem10 (scroll-margin-top)</a></li>
     <li><a href="#lorem-11">lorem11</a></li>
     <li><a href="#lorem-12">lorem12</a></li>
     <li><a href="#lorem-13">lorem13</a></li>
